fix: prevent xss - dom sanitizing

--- a/src/app/editor/component/editor/editor.component.html
+++ b/src/app/editor/component/editor/editor.component.html
@@ -74,7 +74,7 @@
                   </div>
 
                   <p
-                    [innerHtml]="cardContent.text | newlineToBr"
+                    [innerHtml]="cardContent.text | newlineToBr | safe: 'html'"
                     class="font-card"
                   ></p>
                   <div class="input-from">
